--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,8 @@ services:
       timeout: 5s
       retries: 5
     container_name: hl_etl_db
+    ports:
+      - "5436:5432"
     volumes:
       - pgdata:/var/lib/postgresql/data
     environment:
